--- a/src/css/addTOCart.css
+++ b/src/css/addTOCart.css
@@ -110,7 +110,10 @@
   margin-top: 20px;
   font-size: 16px !important;
   letter-spacing: 2.2px !important;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  @media (max-width: 750px) {
+    margin-top: 10px;
+  }
 }
 
 .recommendedProductsCartPage {
@@ -320,23 +323,33 @@
   color: #00000098;
 }
 
-.marqueeContainer {
+.marqueeText {
+  display: flex;
+  justify-content: flex-start;
+  /* border: 1px solid red; */
   overflow: hidden;
-  white-space: nowrap;
-  position: relative;
 }
 
-.marqueeText {
-  display: block;
-  padding-left: 100%;
-  animation: scrollLeft 3s linear infinite;
+.marqueeText span {
+  font-size: 12.4px;
+  text-transform: uppercase;
+  white-space: nowrap;
+  letter-spacing: 0.83px;
+  padding: 0 60px;
+  line-height: normal;
+  font-weight: 500;
+  color: red;
+  animation: scrollLeft 6000ms linear infinite;
+  @media (max-width: 450px) {
+    font-size: 11.5px;
+  }
 }
 
 @keyframes scrollLeft {
   0% {
-    transform: translateX(0);
+    transform: translateX(0); /* Start from the right */
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-100%); /* Move to the left */
   }
 }
