--- a/src/css/checkOut.css
+++ b/src/css/checkOut.css
@@ -41,6 +41,7 @@
 }
 
 .checkOutLeftSideMini {
+  border-top: 0.4px solid rgb(206, 206, 206);
   display: none;
   @media (max-width: 750px) {
     display: block;
@@ -331,7 +332,14 @@
   }
 }
 
+.applyCouponBtnCartPage{
+  text-align: right !important;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
 .couponApplyBtn {
+  width: 100%;
   padding-inline: 10px !important;
   min-height: 30px !important;
   width: 44px !important;
@@ -352,6 +360,21 @@
   z-index: 1;
   gap: 5px;
   cursor: pointer;
+}
+
+.couponApplyBtnMain{
+  padding-inline: 20px !important;
+  color: green;
+  font-size: 11px;
+  letter-spacing: 1.6px;
+  line-height: 14.4px;
+  text-transform: uppercase;
+  font-weight: 600;
+  transition: all 0.2s ease-in;
+  cursor: pointer;
+  @media (max-width: 530px) {
+    padding-inline: 10px !important;
+  }
 }
 
 .couponDescription {
@@ -420,14 +443,11 @@
 
 /*  */
 
-.applyFilterAppliedFilter {
-  width: 100% !important;
-  padding-inline: 0px !important;
-}
+
 
 .priceSectionMini {
   padding-inline: 20px !important;
-  padding-top: 15px !important;
+  padding-top: 8px !important;
   padding-bottom: 5px !important;
   @media (max-width: 530px) {
     padding-inline: 10px !important;
