--- a/src/css/paymentPage.css
+++ b/src/css/paymentPage.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   overflow: hidden;
   display: flex;
-  max-height: 85dvh;
+  height: 85dvh;
   max-width: 1100px;
   @media (max-width: 750px) {
     padding-inline: 0px;
@@ -10,6 +10,10 @@
   }
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+
+  @media (max-width: 750px) {
+    height: 100dvh;
+  }
 }
 
 .paymentPageInnerMain {
@@ -58,13 +62,6 @@
   width: 100dvw;
 }
 
-.paymentPageTopMini {
-  display: none;
-  @media (max-width: 750px) {
-    display: block;
-  }
-}
-
 .paymentPageContent {
   padding-inline: 20px;
   @media (max-width: 750px) {
@@ -82,9 +79,18 @@
   @media (max-width: 750px) {
     padding-inline: 10px;
   }
+  @media (max-width: 350px) {
+    padding-block: 10px !important;
+  }
+}
+
+.paymentPageHeadingMini img {
+  cursor: pointer;
+  width: 22px;
 }
 
 .orderTotalAndCloseBtn img {
+  cursor: pointer;
   width: 22px;
 }
 
@@ -92,7 +98,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  gap: 30px;
+  gap: 10px;
 }
 
 .addressMainPaymentPage {
@@ -105,25 +111,167 @@
 
 .addressMapping {
   padding-right: 4px;
-  height: 60dvh;
+  height: 59.3dvh;
   margin-bottom: 10px;
   overflow: auto;
 }
 
-.addressMapping::-webkit-scrollbar {
+.addressMappingMini {
+  padding-right: 4px;
+  height: 65.8dvh;
+  margin-bottom: 10px;
+  overflow: auto;
+  @media (max-width: 360px) {
+    height: 64dvh !important;
+  }
+}
+
+/*  */
+
+.paymentOptionsMain {
+  border-block: 0.4px solid rgb(206, 206, 206);
+  padding-right: 4px;
+  height: 44dvh;
+  overflow: auto;
+  @media (max-width: 750px) {
+    height: 50dvh;
+  }
+  @media (max-width: 360px) {
+    height: 48dvh;
+  }
+}
+
+.paymentMethodsSingleMain {
+  padding-block: 10px;
+  border-bottom: 0.4px solid rgb(206, 206, 206);
+  border-left: 0.4px solid rgb(206, 206, 206);
+  border-right: 0.4px solid rgb(206, 206, 206);
+  padding-inline: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.paymentOptionNameImgAmount {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.paymentOptFont {
+  display: flex;
+  align-items: end;
+  text-transform: uppercase;
+  line-height: 26px;
+  letter-spacing: 1.01px;
+  font-size: 13.5px;
+  font-weight: 580;
+  color: rgb(103, 102, 102);
+  @media (max-width: 425px) {
+    line-height: 20px;
+    font-size: 12px;
+  }
+  @media (max-width: 355px) {
+    font-size: 11px;
+  }
+}
+
+.paymentOptAmountFont {
+  line-height: 22px !important;
+  font-weight: 600 !important;
+  color: #000000e4;
+}
+
+.paymentOptAmountFont img {
+  width: 20px;
+  opacity: 0.6;
+}
+
+.deliveryIconAndText {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 5px;
+  color: rgb(103, 102, 102) !important;
+}
+
+.paymentOptImgName {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.paymentOptImgName img {
+  width: 25px;
+}
+
+.paymentPageFreeGiftDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+
+.freeGiftText {
+  font-size: 10px;
+  text-transform: uppercase;
+  letter-spacing: 0.63px;
+  color: #fff;
+  padding-inline: 5px;
+  background-color: #34a853;
+  @media (max-width: 425px) {
+    font-size: 9px;
+  }
+  @media (max-width: 311px) {
+    font-size: 7.8px;
+  }
+}
+
+.paymentPageTopHeading {
+  width: fit-content;
+  margin-block: 0px !important;
+  line-height: 22px !important;
+}
+
+/*  */
+/* Scrollbar styles */
+.addressMapping::-webkit-scrollbar,
+.addressMappingMini::-webkit-scrollbar,
+.inputFiledMainMini::-webkit-scrollbar {
+  scroll-behavior: smooth;
+  width: 4px;
+  background-color: transparent;
+}
+
+.addressMapping::-webkit-scrollbar-thumb,
+.addressMappingMini::-webkit-scrollbar-thumb,
+.inputFiledMainMini::-webkit-scrollbar-thumb {
+  background-color: #88888879;
+  border-radius: 4px;
+}
+
+.addressMapping::-webkit-scrollbar-thumb:hover,
+.addressMappingMini::-webkit-scrollbar-thumb:hover,
+.inputFiledMainMini::-webkit-scrollbar-thumb:hover {
+  background-color: #aaa;
+}
+
+.paymentOptionsMain::-webkit-scrollbar {
   scroll-behavior: smooth;
   width: 4px; /* Width of the scrollbar */
   background-color: transparent; /* Background color of the scrollbar track */
 }
 
-.addressMapping::-webkit-scrollbar-thumb {
+.paymentOptionsMain::-webkit-scrollbar-thumb {
   background-color: #88888879; /* Color of the scrollbar thumb */
   border-radius: 4px; /* Rounded corners of the scrollbar thumb */
 }
 
-.addressMapping::-webkit-scrollbar-thumb:hover {
+.paymentOptionsMain::-webkit-scrollbar-thumb:hover {
   background-color: #aaa; /* Color when hovering over the scrollbar thumb */
 }
+
+/*  */
 
 .savedAddHeadPaymentPage {
   font-size: 16px !important;
@@ -166,7 +314,21 @@
   padding-block: 20px;
 }
 
+.inputFiledMainMini {
+  height: 77dvh;
+  padding-inline: 20px;
+  padding-block: 20px;
+  overflow: auto;
+  @media (max-width: 360px) {
+    height: 76dvh;
+  }
+}
+
 .selectedAddressPaymentPage {
+  background-color: rgba(220, 220, 220, 0.578);
+}
+
+.selectedPaymentMethod {
   background-color: rgba(220, 220, 220, 0.578);
 }
 
@@ -185,5 +347,114 @@
   font-size: 16px !important;
   letter-spacing: 1.83px !important;
   text-align: left;
-  margin-block: 10px;
+  margin-block: 5px;
+  @media (max-width: 450px) {
+    font-size: 14px !important;
+    letter-spacing: 0.93px;
+    margin-block: 5px;
+  }
+}
+
+.paymentPageTopHeading {
+  margin-block: 0px !important;
+  line-height: 22px !important;
+  font-size: 16px !important;
+  @media (max-width: 450px) {
+    font-size: 14px !important;
+    letter-spacing: 0.93px;
+  }
+}
+
+.chosenAddressDiv {
+  padding-inline: 20px;
+  @media (max-width: 750px) {
+    padding-inline: 10px;
+  }
+}
+
+.chosenAddress {
+  border: 0.4px solid rgb(206, 206, 206);
+  padding-block: 5px;
+  padding-inline: 10px;
+  border-radius: 3px;
+  margin-top: 10px;
+}
+
+.chosenFullAddress {
+  letter-spacing: 1px;
+  text-transform: capitalize;
+  color: rgb(103, 102, 102);
+  font-size: 12.5px !important;
+  line-height: 16px !important;
+  overflow: hidden;
+  display: -webkit-box !important;
+  text-overflow: ellipsis;
+  -webkit-font-smoothing: antialiased;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+}
+
+.addLineHeight {
+  line-height: 20px !important;
+}
+
+.addressNotSelectedText {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.addressNotSelect {
+  justify-content: center !important;
+  color: red;
+}
+
+.deliverHeadAndSelectAddress {
+  display: flex;
+  justify-content: space-between;
+}
+
+.selectAddress750Px {
+  font-size: 13px !important;
+  display: none;
+  color: green;
+  cursor: pointer;
+  @media (max-width: 750px) {
+    display: block;
+  }
+}
+
+.ConfirmPayment {
+  padding-inline: 20px;
+  margin-top: 10px;
+  border-top: 0.4px solid rgb(206, 206, 206);
+  @media (max-width: 750px) {
+    padding-inline: 10px;
+  }
+}
+
+.confirmPaymentBtn {
+  width: 100% !important;
+}
+
+.selectedPaymentMet {
+  text-align: left !important;
+  margin-block: 5px !important;
+}
+
+.animationMain{
+  height: 100dvh;
+  width: 100dvw;
+  background-color: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.animationSuccess {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
 }
