--- a/src/css/paymentPage.css
+++ b/src/css/paymentPage.css
@@ -3,7 +3,7 @@
   overflow: hidden;
   display: flex;
   height: 85dvh;
-  max-width: 1100px;
+  width: 1100px;
   @media (max-width: 750px) {
     padding-inline: 0px;
     max-height: 99.85dvh;
@@ -405,8 +405,18 @@
 }
 
 .addressNotSelect {
+  font-size: 12px !important;
   justify-content: center !important;
   color: red;
+  overflow: hidden;
+  display: -webkit-box !important;
+  text-overflow: ellipsis;
+  -webkit-font-smoothing: antialiased;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  @media (max-width : 374px) {
+    font-size: 10px !important;
+  }
 }
 
 .deliverHeadAndSelectAddress {
@@ -463,4 +473,8 @@
   @media (max-width: 285px) {
     min-width: 200px;
   }
+}
+
+.paymentPageNoSavedAdd{
+  padding-block: 130px !important;
 }
