--- a/src/css/myOrders.css
+++ b/src/css/myOrders.css
@@ -20,16 +20,17 @@
 .orderItemsTop {
   font-size: 15px;
   font-weight: 600;
+  letter-spacing: 0.8px;
   display: flex;
   justify-content: space-between;
   margin-bottom: 15px;
   @media (max-width: 750px) {
-    font-size: 13.5px;
+    /* font-size: 13.5px; */
     margin-bottom: 10px;
   }
-  @media (max-width: 450px) {
+  /* @media (max-width: 450px) {
     font-size: 12px;
-  }
+  } */
 }
 
 .orderItems {
@@ -49,22 +50,20 @@
 
 .itemNameAndPriceMyOrders {
   font-size: 14px;
-  letter-spacing: 1.13px;
+  letter-spacing: 0.8px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: rgb(103, 102, 102);
   letter-spacing: 0.93px;
-  @media (max-width: 450px) {
+  /* @media (max-width: 450px) {
     font-size: 12px;
-  }
+  } */
 }
 
 .catAndQuantity {
   font-size: 12.5px !important;
-  @media (max-width: 450px) {
-    font-size: 11px !important;
-  }
+  letter-spacing: 0.8px;
 }
 
 .ordersItemName {
@@ -103,15 +102,16 @@
 }
 
 .orderDetailsTop {
-  font-size: 15px;
+  font-size: 14px;
   font-weight: 600;
+  letter-spacing: 0.8px;
   padding-bottom: 12px !important;
-  @media (max-width: 750px) {
+  /* @media (max-width: 750px) {
     font-size: 13.5px;
   }
   @media (max-width: 450px) {
     font-size: 12px;
-  }
+  } */
   padding-block: 5px;
   border-bottom: 0.4px solid rgb(207, 207, 207);
   display: flex;
@@ -135,14 +135,15 @@
 
 .orderDetailOrderSummary {
   font-weight: 500 !important;
-  font-size: 13px;
+  font-size: 14px;
+  letter-spacing: 0.8px;
   padding-top: 10px;
   padding-bottom: 5px;
   color: green;
   margin-bottom: 0px !important;
-  @media (max-width: 450px) {
+  /* @media (max-width: 450px) {
     font-size: 11px;
-  }
+  } */
 }
 
 .orderDetailsItemsMap {
@@ -166,9 +167,10 @@
   color: #000;
   padding-bottom: 5px;
   font-size: 16px;
-  @media (max-width: 450px) {
-    font-size: 14px;
-  }
+  letter-spacing: 0.8px;
+  /* @media (max-width: 450px) {
+    font-size: 15px;
+  } */
 }
 
 .orderDetailsAppliedCouponMain {
@@ -232,12 +234,15 @@
   line-height: 18px;
 }
 
-.paidViaText{
+.paidViaText {
   font-size: 14px;
-  letter-spacing: 1.13px;
+  letter-spacing: 0.8px;
   color: rgb(103, 102, 102);
   letter-spacing: 0.93px;
-  @media (max-width: 450px) {
-    font-size: 12px;
-  }
+}
+
+.pricingSection {
+  font-size: 14px;
+  letter-spacing: 0.8px;
+  line-height: 18px;
 }
