--- a/src/css/account.css
+++ b/src/css/account.css
@@ -139,7 +139,11 @@
 .acTopSecBottomSide {
   display: flex;
   margin-top: 12px;
-  gap: 15px;
+  gap: 20px;
+  @media (max-width: 550px) {
+    gap: 5px;
+    justify-content: space-between;
+  }
 }
 
 .singleLineEmailCOntact {
@@ -147,15 +151,23 @@
   justify-content: center;
   align-items: center;
   @media (max-width: 550px) {
+    width: 50%;
     flex-direction: column;
     text-align: start;
     align-items: start;
   }
 }
 
+.contactSideAccount {
+  @media (max-width: 550px) {
+    align-items: end !important;
+  }
+}
+
 .middleLine {
   border-right: 0.8px solid rgb(152, 151, 151);
-  padding-right: 20px;
+  padding-right: 8px;
+  overflow: hidden;
 }
 
 .emailContText {
