done with page component

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1097,3 +1097,13 @@
     padding-left: 10px;
   }
 }
+
+.secondBanner{
+  display: flex;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  @media (max-width: 750px) {
+    flex-direction: column;
+  }
+}
